2010-05-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make "need expansion" support compile-time optional, default off.

	* base.h (WITH_NEEDEXP): New #define.
	* b-fro.h (struct atat): Include members only if
	‘WITH_NEEDEXP’: ‘needexp_count’, ‘ineedexp’, ‘needexp’.
	* b-grok.c (atat_ineedexp_many, atat_ineedexp_few):
	Surround with ‘#if WITH_NEEDEXP’.
	(maybe_read_atat): Conditionalize "need
	expansion" support with ‘#if WITH_NEEDEXP’.
	* yarrrr.c [TEST_GROK] (spew_atat): Likewise.

2010-05-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: format_locks

	* base.h (format_locks): New func decl.
	* rcsgen.c (format_locks): New func.
	(putadmin): Use ‘format_locks’.
	* rlog.c (main): Likewise.

2010-05-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int org] Move ‘addlock’ to b-excwho.[hc].

	* rcsedit.c (addlock): Move func from here...
	* b-excwho.c: #include "b-divvy.h".
	(addlock): ...to here.
	* base.h (addlock): Move func decl from here...
	* b-excwho.h (addlock): ...to here.

2010-05-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: lock_on

	* b-excwho.c (lock_on): New func.
	* b-excwho.h (lock_on): New func decl.
	* rcs.c (branchpoint): Use ‘lock_on’.
	* rcsedit.c (addlock): Likewise.
	* rlog.c (extractdelta): Likewise.

2010-05-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Delete abstraction: now

	* ci.c (getcurdate): Use ‘BE (now)’ directly.
	* rcsedit.c (setmtime): Likewise.
	* rcstime.c (str2date): Likewise.
	* rcsutil.c (gnurcs_init): Init ‘BE (now)’.
	(now): Delete func.
	* base.h (now): Delete func decl.

2010-05-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Factor constant string "revision number".

	* b-anchor.c (ks_revno): New var.
	* b-grok.c (struct grok): Add member ‘bor_no’.
	(ks_revision_number): Delete var.
	(maybe_read_num, must_read_num, MUST_REVNO): Use ‘ks_revno’.
	(must_colon_revno): Use ‘g->bor_no’.
	(full): Init ‘g->bor_no’.
	* base.h (ks_revno): New var decl.
	* ci.c (main): Use ‘ks_revno’.