@@ -54,7 +54,7 @@ scandeltatext (struct editstuff *es, struct wlink **ls,
       nextdelta = (*ls)->entry;
       log = nextdelta->log;
       text = nextdelta->text;
-      range.beg = fro_tello (from);
+      range.beg = nextdelta->neck;
       range.end = text->beg;
       if (needlog && delta == nextdelta)
         {
